added link to python api repo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="https://instagram.com/jburgosphotos">Instagram</a></li>
         <li><a href="https://twitter.com/Try_n2b_Catholic">Twitter</a></li>
         <li><a href="https://github.com/jeffreyb92">Github</a></li>
+        <li><a href="https://jeffreyb92.github.io/python-api-challenge">Python API Challenge</a></li>
     </ul>
 
     <table border=".5">
