--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <p>In my free time (when I have any) I like to take pictures, create music, play video games, or hang out with family and friends.</p>
 
     <ul>
-        <li><a href="https://instagram.com/jburgosphotos">Instagram</a></li>
-        <li><a href="https://twitter.com/Try_n2b_Catholic">Twitter</a></li>
-        <li><a href="https://github.com/jeffreyb92">Github</a></li>
+        <li><a href="https://instagram.com/jburgosphotos" target="_blank">Instagram</a></li>
+        <li><a href="https://twitter.com/Try_n2b_Catholic" target="_blank">Twitter</a></li>
+        <li><a href="https://github.com/jeffreyb92" target="_blank">Github</a></li>
         <li><a href="https://jeffreyb92.github.io/python-api-challenge">Python API Challenge</a></li>
     </ul>
 
