index page set up

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Projects
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" id="navbardropdown">
-            <a class="dropdown-item" href="https://jeffreyb92.github.io/billboard-analysis/" target="_blank">Top 100 Billboard Analysis</a>
+            <a class="dropdown-item" href="https://jeffreyb92.github.io/billboard-analysis/">Top 100 Billboard Analysis</a>
             <div class="dropdown-divider" id="dropdowndivider"></div>
             <a class="dropdown-item" href="WebVisualizations/allartists.html">Lyrics Analysis & Prediction</a>
             <div class="dropdown-divider" id="dropdowndivider"></div>
