--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" id="navbardropdown">
             <a class="dropdown-item" href="https://jeffreyb92.github.io/billboard-analysis/">Top 100 Billboard Analysis</a>
             <div class="dropdown-divider" id="dropdowndivider"></div>
-            <a class="dropdown-item" href="WebVisualizations/allartists.html">Lyrics Analysis & Prediction</a>
+            <a class="dropdown-item" href="https://jeffreyb92.github.io/lyrics-analysis">Lyrics Analysis & Prediction</a>
             <div class="dropdown-divider" id="dropdowndivider"></div>
-            <a class="dropdown-item" href="WebVisualizations/topartists.html">Baseball Pitching Analysis</a>
+            <a class="dropdown-item" href="https://jeffreyb92.github.io/baseball-pitching-analysis">Baseball Pitching Analysis</a>
             <div class="dropdown-divider" id="dropdowndivider"></div>
-            <a class="dropdown-item" href="WebVisualizations/1960artists.html">Musical Twitter Analysis</a>
+            <a class="dropdown-item" href="https://jeffreyb92.github.io/musical-twitter-analysis">Musical Twitter Analysis</a>
           </div>
         </li>
       </ul>
