--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <div class="row justify-content-around" id="rowpad">
       <div class="col-md-7 h-100" id="columnpad">
         <p> <b id="title-text">Data Analyst</b> with a <br>
-          <span class="bold-text">B.S. in Computer Science, M.S. in Data Science, <br> 
-          Data Scientist with Python Certificate from DataCamp,</span>
-          and currently completing a <span class="bold-text">Bootcamp in Data Analytics & Visualization </span> 
-          through <span class="bold-text">Rutgers University.</span>  I am skilled in <span class="bold-text">Python, Tableau,SQL, R, and Excel.</span>  
+          <span class="bold-text"> <b>B.S.</b> in Computer Science, <b>M.S.</b>  in Data Science, <br> 
+          Data Scientist with Python <b>Certificate</b></span> from DataCamp,
+          and currently completing a course in <span class="bold-text">Data Analytics & Visualization </span> 
+          through Rutgers University. I am skilled in <span class="bold-text">Python, Tableau,SQL, R, and Excel.</span>  
           An <span class="bold-text">avid learner</span>  who works well with others, and is <span class="bold-text">passionate </span> 
           about helping a company come to know their data on a more 
           <span class="bold-text">profound level.</span>  Recently completed a project with a team of three 
